@@ -1,6 +1,8 @@
 ?? ???? ???? - 2.1.3-rc1
 ------------------------
 
+ * Added ability to compile without an external API (-DNO_MODSEC_API).
+
 
 27 July 2007 - 2.1.2
 --------------------
